fixed some comments

--- a/JMB_BGG_comment_rating_prediction_balancing_training_data_v2.ipynb
+++ b/JMB_BGG_comment_rating_prediction_balancing_training_data_v2.ipynb
@@ -371,7 +371,7 @@
     "# create the classifier\n",
     "clf = MultinomialNB()\n",
     "\n",
-    "# train with all data\n",
+    "# train with unbalanced data\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
     "# model score\n",
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's see how the model performed at each rating level\n",
+    "### Let's see how the unbalanced-trained model performed at each rating level\n",
     "\n",
     "I'll plot a confusion matrix, which shows the proportion of predicted ratings vs the actual ratings. If the classifier properly predicting ratings (predicted rating = actual rating), then only cells along the diagonal will be light (i.e., larger values)."
    ]
